added project css and sections

--- a/index.html
+++ b/index.html
@@ -127,16 +127,26 @@
 						v-for="(item, index) in blogs"
 						:key="index"
 					>
+						<div>
+							<h2>{{item.type}}</h2>
+						</div>
+						
+						<div class="project-image-container">
+							<a :href="item.link">
+								<img :src="item.image">
+							</a>
+						</div>
 						<h2>
 							<a :href="item.link">{{ item.title }}</a>
 						</h2>
+						<h3>
+							{{item.title2}}
+						</h3>
 						<p>{{ item.date }}</p>
-						<div v-if="item.lock" class="lock-container">
-							<img class="lock-icon" src="images/icons/lock-icon.png">
-							<a href="https://insight.equilar.com/app/login/login.jsp" target="_blank" class="lock-link">Login</a> |
-							<a href="packages.html" class="lock-link">Subscribe</a>
-						</div>
 						<p v-html="item.description"></p>
+						<div v-html>
+							{{item.embed}}
+						</div>
 					</div>
 					<hr class="full">
 				</div>
@@ -221,38 +231,40 @@
 
 		data.blogs = 
 		[
-    {
-      "title":"Equilar 100: The Highest-Paid CEOs at the Largest U.S. Companies",
-      "link": "https://www.equilar.com/reports/72-highest-paid-ceos-2020-equilar-100.html",
-      "lock" : "",
-      "date"  : "April 23, 2020",
-      "description" : "The annual Equilar 100 study examines CEO compensation at the largest companies by revenue that filed an annual proxy statement before March 31."
+		{
+      "title":"React Customize SVG",
+	  "title2": "Props, State, Event Handling",
+      "type": "Codepen",
+      "image" : "images/cloud.png",
+      "link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+      "description" : "A React project that uses value from an input to pass information between states & props."
     },
-    {
-      "title":"Executive Long-Term Incentive Plans",
-      "link": "https://info.equilar.com/2435-2020-ltip",
-      "lock" : "true",
-      "date"  : "April 16, 2020",
-      "description" : "<i>Executive Long-Term Incentive Plans</i>, an Equilar publication, examines trends in incentive plan design at Equilar 500 companies over the last five fiscal years. The report analyzes performance metrics and periods associated with long-term awards granted to NEOs, particularly CEOs and CFOs. E*TRADE Corporate Services provided independent commentary on the structure of incentive plan design, particularly in light of the current environment."
+	{
+      "title":"React Customize SVG",
+	  "title2": "Props, State, Event Handling",
+      "type": "Codepen",
+      "image" : "images/cloud.png",
+      "link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+      "description" : "A React project that uses value from an input to pass information between states & props."
     }
 ]
 
 	data.saved = [
     {
-      "title":"Equilar 100: The Highest-Paid CEOs at the Largest U.S. Companies",
-      "title2": "Pay Trends Before the COVID-19 Pandemic",
-      "link": "https://www.equilar.com/reports/72-highest-paid-ceos-2020-equilar-100.html",
-      "lock" : "",
-      "date"  : "April 23, 2020",
-      "description" : "The annual Equilar 100 study examines CEO compensation at the largest companies by revenue that filed an annual proxy statement before March 31."
+      "title":"React Customize SVG",
+	  "title2": "Props, State, Event Handling",
+      "type": "Codepen",
+      "image" : "images/cloud.png",
+      "link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+      "description" : "A React project that uses value from an input to pass information between states & props."
     },
-    {
-      "title":"Executive Long-Term Incentive Plans",
-      "title2": "",
-      "link": "https://info.equilar.com/2435-2020-ltip",
-      "lock" : "true",
-      "date"  : "April 16, 2020",
-      "description" : "<i>Executive Long-Term Incentive Plans</i>, an Equilar publication, examines trends in incentive plan design at Equilar 500 companies over the last five fiscal years. The report analyzes performance metrics and periods associated with long-term awards granted to NEOs, particularly CEOs and CFOs. E*TRADE Corporate Services provided independent commentary on the structure of incentive plan design, particularly in light of the current environment."
+	{
+      "title":"React Customize SVG",
+	  "title2": "Props, State, Event Handling",
+      "type": "Codepen",
+      "image" : "images/cloud.png",
+      "link": "https://codepen.io/dannyhwangca/full/VwLOqya",
+      "description" : "A React project that uses value from an input to pass information between states & props."
     }
 ]
 		
