--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
 						<div class="project-type-container">
 							<div :class="item.type">
 								<h2>{{item.type}}</h2>
-								<i class="fas fa-external-link-square-alt"></i>
-								<i class="fas fa-expand-arrows-alt"></i>
+								<i style="padding-left: 5px;" class="fas fa-expand-arrows-alt"></i>
+								<a :href="item.link" target="_blank">
+									<i class="fas fa-external-link-square-alt"></i>
+								</a>
 							</div>
 						</div>
 						<div v-if="item.embed">
