--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
 					>
 						<div class="project-type-container">
 							<div :class="item.type">
-								<h2>{{item.type}}</h2>
-								<i style="padding-left: 5px;" class="fas fa-expand-arrows-alt"></i>
+								<a :href="item.link" target="_blank">
+									<h2>{{item.type}}</h2>
+								</a>
+								<i class="fas fa-expand-arrows-alt"></i>
 								<a :href="item.link" target="_blank">
 									<i class="fas fa-external-link-square-alt"></i>
 								</a>
