--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
 				<div class="main-site-info">
 					<h1>About this site</h1>
 					<p>
-						Thank you for visiting this site! 
-						<br>
-						Below are a list of the various technologies used. 
+						Thank you for visiting my humble resume site! 
+						<br><br>
+						I love making interactable & animated web features. 
+						<br><br>
+						Below is a list of the various technologies used in its creation. 
 					</p>
 				</div>
 				<div class="list-site-info">
@@ -236,6 +238,9 @@
 										<li>v-if: Conditional Display</li>
 									</ul>
 								<li>FontAwesome</li>
+									<ul>
+										<li>Import Various SVGs</li>
+									</ul>
 							</ul>
 					</div>
 				</div>
