--- a/index.html
+++ b/index.html
@@ -179,71 +179,73 @@
 
 			<a name="linkSite"></a>
 			<div id="site-trigger" class="site-container">
-				<div class="main-site-info">
-					<h1>About this site</h1>
-					<p>
-						Thank you for visiting my humble resume site! 
-						<br><br>
-						I love making interactable & animated web features. 
-						<br><br>
-						Below is a list of the various technologies used in its creation. 
-					</p>
-				</div>
-				<div class="list-site-info">
-					<div site-info>
-						<h2>Languages</h2>
-							<ul>
-								<li>HTML5</li>
-									<ul>
-										<li>Pseudo Elements</li>
-										<li>Hover & other event triggers</li>
-									</ul>
-								<li>CSS3</li>
-									<ul>
-										<li>Keyframe Animations</li>
-										<li>Transitions</li>
-									</ul>
-								<li>Javascript</li>
-									<ul>
-										<li>Fetch, Promise, & Parsing JSON</li>
-										<li>Data Mapping</li>
-										<li>Keyword Search Function</li>
-									</ul>
-							</ul>
+				<div class="site-inner-container">
+					<div class="main-site-info">
+						<h1>About this site</h1>
+						<p>
+							Thank you for visiting my humble resume site! I love making respoinsive, interactable, and animated web features. 
+							<br><br>
+							Below is a list of the various technologies used in its creation. 
+						</p>
 					</div>
-					<div site-info>
-						<h2>Libraries</h2>
-							<ul>
-								<li>Jquery</li>
-									<ul>
-										<li>Selectors</li>
-										<li>DOM State</li>
-										<li>Event Handling</li>
-										<li>Effects & Class manipulation</li>
-									</ul>
-								<li>GSAP</li>
-									<ul>
-										<li>Timline Management</li>
-										<li>Tweening</li>
-										<li>Transitions & Animations</li>
-									</ul>
-								<li>ScrollMagic</li>
-									<ul>
-										<li>Triggers & Hooks</li>
-										<li>GSAP Integration</li>
-									</ul>
-								<li>Vue.js</li>
-									<ul>
-										<li>v-for: Looping Array Data to HTML Template</li>
-										<li>v-if: Conditional Display</li>
-									</ul>
-								<li>FontAwesome</li>
-									<ul>
-										<li>Import Various SVGs</li>
-									</ul>
-							</ul>
+					<div class="list-site-info">
+						<div class="site-info">
+							<h2>Languages</h2>
+								<ul>
+									<li>HTML5</li>
+										<ul>
+											<li>Pseudo Elements</li>
+											<li>Hover & other event triggers</li>
+										</ul>
+									<li>CSS3</li>
+										<ul>
+											<li>Keyframe Animations</li>
+											<li>Transitions</li>
+										</ul>
+									<li>Javascript</li>
+										<ul>
+											<li>Fetch, Promise, & Parsing JSON</li>
+											<li>Data Mapping</li>
+											<li>Keyword Search Function</li>
+										</ul>
+								</ul>
+						</div>
+						<div class="site-info">
+							<h2>Libraries</h2>
+								<ul>
+									<li>Jquery</li>
+										<ul>
+											<li>Selectors</li>
+											<li>DOM State</li>
+											<li>Event Handling</li>
+											<li>Effects & Class manipulation</li>
+										</ul>
+									<li>GSAP</li>
+										<ul>
+											<li>Timline Management</li>
+											<li>Tweening</li>
+											<li>Transitions & Animations</li>
+										</ul>
+									<li>ScrollMagic</li>
+										<ul>
+											<li>Triggers & Hooks</li>
+											<li>GSAP Integration</li>
+										</ul>
+									<li>Vue.js</li>
+										<ul>
+											<li>v-for: Looping Array Data to HTML Template</li>
+											<li>v-if: Conditional Display</li>
+										</ul>
+									<li>FontAwesome</li>
+										<ul>
+											<li>Import Various SVGs</li>
+										</ul>
+								</ul>
+						</div>
 					</div>
 				</div>
+				
+				
 			</div>
 
 			<a name="linkContact"></a>
