added css to site info

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					</div>
 					<div class="list-site-info">
 						<div class="site-info">
-							<h2>Languages</h2>
+							<h2>Language</h2>
 								<ul>
 									<li>HTML5</li>
 										<ul>
@@ -208,10 +208,15 @@
 											<li>Data Mapping</li>
 											<li>Keyword Search Function</li>
 										</ul>
+									
+								</ul>
+								<h2>Design</h2>
+								<ul>
+									<li>FontAwesome</li>
 								</ul>
 						</div>
 						<div class="site-info">
-							<h2>Libraries</h2>
+							<h2>Library</h2>
 								<ul>
 									<li>Jquery</li>
 										<ul>
@@ -235,10 +240,6 @@
 										<ul>
 											<li>v-for: Looping Array Data to HTML Template</li>
 											<li>v-if: Conditional Display</li>
-										</ul>
-									<li>FontAwesome</li>
-										<ul>
-											<li>Import Various SVGs</li>
 										</ul>
 								</ul>
 						</div>
