added contact html

--- a/index.html
+++ b/index.html
@@ -260,8 +260,15 @@
 			</div>
 
 			<a name="linkContact"></a>
-			<div id="contact-trigger" class="contact-container">
+			<div id="contact-trigger" class="contact-outer-container">
+				<div class="contact-inner-container">
+					<div class="contact-icon-container">
 
+					</div>
+					<div class="contact-info-container">
+						
+					</div>
+				</div>
 			</div>
 			
 	</div>
