added contact svg and links

--- a/index.html
+++ b/index.html
@@ -263,7 +263,30 @@
 			<div id="contact-trigger" class="contact-outer-container">
 				<div class="contact-inner-container">
 					<div class="contact-icon-container">
-
+						<div class="svg-container">
+							<a href="mailto:dannyhwangca@gmail.com" target="_blank">
+								<i class="fas fa-envelope-square"></i>
+								<h2>Email</h2>
+							</a>
+						</div>
+						<div class="svg-container">
+							<a href="https://www.linkedin.com/in/dannyhwangca/" target="_blank">
+								<i class="fab fa-linkedin"></i>
+								<h2>Linkedin</h2>
+							</a>
+						</div>
+						<div class="svg-container">
+							<a href="https://github.com/DannyHwangCA" target="_blank">
+								<i class="fab fa-github-square"></i>
+								<h2>Github</h2>
+							</a>
+						</div>
+						<div class="svg-container">
+							<a href="https://codepen.io/dannyhwangca" target="_blank">
+								<i class="fab fa-codepen"></i>
+								<h2>Codepen</h2>
+							</a>
+						</div>
 					</div>
 					<div class="contact-info-container">
 						
