added contact info

--- a/index.html
+++ b/index.html
@@ -289,7 +289,34 @@
 						</div>
 					</div>
 					<div class="contact-info-container">
-						
+						<h2>
+							Contact Me
+						</h2>
+						<p>
+							<b>Email:</b> dannyhwangca@gmail.com
+						</p>
+						<p>
+							<b>Phone: </b> (626) 244-5621
+						</p>
+						<p>
+							<b>Location:</b> Greater Los Angeles Area - Eastvale, CA 92880
+						</p>
+						<h2>
+							Links
+						</h2>
+						<p>
+							<b>Linkedin:</b> <a href="">https://www.linkedin.com/in/dannyhwangca/</a>
+						</p>
+						<p>
+							<b>Codepen:</b> <a href="">https://codepen.io/dannyhwangca</a>
+						</p>
+						<p>
+							<b>Github:</b> <a href="">https://www.linkedin.com/in/dannyhwangca/</a>
+						</p>
+						<p>
+							<b>Resume (updated April 2020):</b> <a href="">Download Here</a>
+						</p>
+
 					</div>
 				</div>
 			</div>
