more css to content

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 										</ul>
 									<li>CSS3</li>
 										<ul>
+											<li>Flex Box</li>
 											<li>Keyframe Animations</li>
 											<li>Transitions</li>
 										</ul>
